--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,10 @@ if (NOT (DEFINED CMAKE_CUDA_ARCHITECTURES))
   endif()
 endif()
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 project(DeepComp VERSION 1.0.0 LANGUAGES C CXX CUDA)
 
 find_package(MPI REQUIRED)
